fix(backend): update CORS configuration to use setAllowedOriginPatterns for deployed frontend and credentials support